k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emk-backend
  namespace: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: emk-backend
  template:
    metadata:
      labels:
        app: emk-backend
    spec:
      containers:
        - name: backend
          image: dockerhub_user/emk-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
