k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emk-backend
  namespace: backend
spec:
  selector:
    app: emk-backend
  ports:
    - port: 80
      targetPort: 8080
