k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: backend
spec:
  rules:
    - host: api.turbo-metallurg-montazh.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emk-backend
                port:
                  number: 80
